test/tests/errors/error-trap-label-not-exp.sm
// true
// false
/**/
/**/

program {
    trap {
        var x = a + 1;
a:
        output x;
    }
}